# ctc-jax

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  ctc.py  ctc_test.py  data_loader.py  decode.py  explore.ipynb  lstm.py  metrics.py  metrics_test.py  mfcc.py  phoneset.py  prepare_dataset.sh  prepare_timit_dataset.py  requirements.in  requirements_lock.txt  run_training.sh  train_bilstm.py
configs/: bilstm.json  lstm.json  lstm_reduced_set.json  mfcc_13.json  mfcc_26.json  mfcc_39.json
