load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_library(
  name = "mfcc",
  srcs = ["mfcc.py"],
  deps = [
      "@pypi//numpy",
      "@pypi//scipy",
  ]
)

py_library(
    name = "phoneset",
    srcs = ["phoneset.py"]
)


py_binary(
    name = "prepare_timit_dataset",
    srcs = ["prepare_timit_dataset.py"],
    deps = [
        ":mfcc",
        ":phoneset",
        "@pypi//numpy",
        "@pypi//tensorflow",
        "@pypi//sphfile"

    ]
)


py_library(
    name = "lstm",
    srcs = ["lstm.py"],
    deps = [
        "@pypi//jax",
        "@pypi//flax"
    ]
)

py_library(
    name = "ctc",
    srcs = ["ctc.py"],
    deps = [
        "@pypi//numpy",
        "@pypi//scipy"
    ]
)

py_test(
    name = "ctc_test",
    srcs = ["ctc_test.py"],
    deps = [
        ":ctc",
        "@pypi//numpy",
        "@pypi//scipy",
        "@pypi//optax",
    ]
)