load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")


py_binary(
    name = "prepare_timit_dataset",
    srcs = ["prepare_timit_dataset.py"],
    deps = [
        ":phoneset",
        "@pypi//numpy",
        "@pypi//tensorflow",
        "@pypi//sphfile",
        "@pypi//librosa"
    ]
)


py_library(
    name = "phoneset",
    srcs = ["phoneset.py"]
)


py_library(
    name = "lstm",
    srcs = ["lstm.py"],
    deps = [
        "@pypi//jax",
        "@pypi//flax"
    ]
)


py_library(
    name = "data_loader",
    srcs = ["data_loader.py"],
    deps = ["@pypi//tensorflow"]
)


py_library(
    name = "ctc",
    srcs = ["ctc.py"],
    deps = [
        "@pypi//numpy",
        "@pypi//scipy"
    ]
)


py_test(
    name = "ctc_test",
    srcs = ["ctc_test.py"],
    deps = [
        ":ctc",
        "@pypi//numpy",
        "@pypi//scipy",
        "@pypi//optax",
    ]
)


py_library(
    name = "metrics",
    srcs = ["metrics.py"],
    deps = [
        "@pypi//numpy",
    ]
)


py_test(
    name = "metrics_test",
    srcs = ["metrics_test.py"],
    deps = [
        ":metrics",
    ]
)


py_library(
    name = "decode",
    srcs = ["decode.py"],
    deps = [
        "@pypi//numpy"
    ]
)


py_binary(
    name = "train_bilstm",
    srcs = ["train_bilstm.py"],
    deps = [
        ":lstm",
        ":metrics",
        ":data_loader",
        ":decode",
        ":phoneset",
        "@pypi//flax",
        "@pypi//jax",
        "@pypi//optax",
        "@pypi//tqdm",
        "@pypi//tensorflow",
        "@pypi//wandb"
    ]
)